--- a/app/src/main/assets/test.html
+++ b/app/src/main/assets/test.html
@@ -10,6 +10,7 @@
 <body>  
   
 <button onclick="window.jsInterface.showToast('xingxing shi sb')">"haha haha haha"</button>
+<button onclick="javascrtpt:window.location.href='test1.html'">"跳转第二个页面"</button>
 
 
 
